Fixed: Series list jump bar click issues

--- a/frontend/src/Components/Page/PageJumpBar.css
+++ b/frontend/src/Components/Page/PageJumpBar.css
@@ -1,4 +1,5 @@
 .jumpBar {
+  z-index: $pageJumpBarZIndex;
   display: flex;
   align-content: stretch;
   align-items: stretch;
